src/main/java/com/example/springboot/error/Spring/Error/models/domain/Rol.java
package com.example.springboot.error.Spring.Error.models.domain;

public class Rol {
    private String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
